--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
   },
   "dependencies": {
     "@prisma/client": "^5.12.1",
-    "@prisma/client": "^5.12.1",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "embla-carousel-react": "^8.1.3",
     "lucide-react": "^0.364.0",
     "next": "^14.1.4",
     "next-themes": "^0.3.0",
-    "next": "^14.1.4",
-    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^16.6.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
@@ -39,9 +39,7 @@
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
     "prisma": "^5.12.1",
-    "prisma": "^5.12.1",
     "tailwindcss": "^3.3.0",
-    "ts-node": "^10.9.2",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
